arquitetura-microcontainers/arquitetura-microcontainers/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:8.0 
          imagePullPolicy: "Always" 
          ports:
            - containerPort: 3306 
              name: mysql-port 
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume 
      volumes: 
        - name: mysql-volume 
          persistentVolumeClaim:
            claimName: mysql-pvc 
      securityContext:
        fsGroup: 0 
        runAsUser: 0
