arquitetura-microcontainers/arquitetura-microcontainers/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: wordpress-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: wordpress-service 
            port:
              number: 80
